@@ -1,3 +1,10 @@
+// Copyright (C) 2002-2007 Nikolaus Gebhardt
+// This file is part of the "Irrlicht Engine".
+// For conditions of distribution and use, see copyright notice in irrlicht.h
+
+#include "IrrCompileConfig.h"
+#ifdef _IRR_COMPILE_WITH_SKINNED_MESH_SUPPORT_
+
 #include "CBoneSceneNode.h"
 
 namespace irr
@@ -8,10 +15,9 @@ namespace scene
 //! constructor
 CBoneSceneNode::CBoneSceneNode(ISceneNode* parent, ISceneManager* mgr, s32 id,
 	u32 boneIndex, const c8* boneName)
-: IBoneSceneNode(parent, mgr, id), AnimationMode(EBAM_AUTOMATIC), SkinningSpace(EBSS_LOCAL),
-  BoneIndex(boneIndex), BoneName(boneName)
+: IBoneSceneNode(parent, mgr, id), BoneIndex(boneIndex), BoneName(boneName),
+	AnimationMode(EBAM_AUTOMATIC), SkinningSpace(EBSS_LOCAL)
 {
-
 }
 
 
@@ -21,11 +27,13 @@ const c8* CBoneSceneNode::getBoneName() const
 	return BoneName.c_str();
 }
 
+
 //! Returns the index of the bone
 u32 CBoneSceneNode::getBoneIndex() const
 {
 	return BoneIndex;
 }
+
 
 //! Sets the animation mode of the bone. Returns true if successful.
 bool CBoneSceneNode::setAnimationMode(E_BONE_ANIMATION_MODE mode)
@@ -34,17 +42,21 @@ bool CBoneSceneNode::setAnimationMode(E_BONE_ANIMATION_MODE mode)
 	return true;
 }
 
+
 //! Gets the current animation mode of the bone
 E_BONE_ANIMATION_MODE CBoneSceneNode::getAnimationMode() const
 {
 	return AnimationMode;
 }
 
+
 //! returns the axis aligned bounding box of this node
 const core::aabbox3d<f32>& CBoneSceneNode::getBoundingBox() const
 {
 	return Box;
 }
+
+
 /*
 //! Returns the relative transformation of the scene node.
 core::matrix4 CBoneSceneNode::getRelativeTransformation() const
@@ -52,6 +64,7 @@ core::matrix4 CBoneSceneNode::getRelativeTransformation() const
 	return core::matrix4(); // RelativeTransformation;
 }
 */
+
 
 void CBoneSceneNode::OnAnimate(u32 timeMs)
 {
@@ -111,4 +124,6 @@ void CBoneSceneNode::deserializeAttributes(io::IAttributes* in, io::SAttributeRe
 
 } // namespace scene
 } // namespace irr
+
+#endif
 
